<resources>
    <string name="app_name">LibrosPlaneta</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID del libro</string>
    <string name="bookname">Nombre del libro</string>
    <string name="autorname">Nombre del autor</string>
    <string name="persona">Nombre del prestamista</string>
    <string name="telefono">Numero de telefono</string>
    <string name="registrar">Registrar</string>
    <string name="update">Editar</string>
    <string name="delete">Eliminar</string>
</resources>
